Fix gaps between some cells in rounded section
Remove gaps after first cell and before last cell in rounded section

--- a/src/uitableview.css
+++ b/src/uitableview.css
@@ -81,6 +81,7 @@ MIT License
 #uitableview .section.rounded .cell:first-of-type { 
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  border-top: 0.1px solid transparent;
 }
 /* Middle cells (no rounded corners) */
 #uitableview .section.rounded .cell {
